Fix incorrect width on IE search filters (#224)

--- a/app/assets/stylesheets/transformation/components/_search_results_filters.scss
+++ b/app/assets/stylesheets/transformation/components/_search_results_filters.scss
@@ -15,6 +15,7 @@
     font: inherit;
     margin-bottom: 0;
     padding: $spacing-4 0;
+    width: 100%;
 
     &:after {
       content: "";
